修复一些bug
修复一个关键问题，似乎无法正确加载是因为我没有加入自动导入文件。